# django_vue_example

./: .editorconfig  .gitignore  LICENSE  README.rst  commands.py  manage.py  pyproject.toml  setup.cfg
apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
apps/templates/: base.html
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_vue_test/: conftest.py
django_vue_test/users/: admin.py  apps.py  urls.py
django_vue_test/users/api/: serializers.py
django_vue_test/users/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
docs/: conf.py  index.rst
notebooks/: tests.ipynb
requirements/: base.txt  local.txt
vue_frontend/: .eslintrc.js  README.md  package-lock.json  package.json  tslint.json
vue_frontend/src/: App.vue  api.spec.ts  api.test.ts  api.ts  apiFoo.ts  env.ts  main.ts
vue_frontend/src/components/: HelloWorld.vue  NotificationsManager.vue  UploadButton.vue
vue_frontend/src/plugins/: api.spec.ts  api.ts
vue_frontend/src/store/admin/: actions.ts
vue_frontend/src/store/main/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
vue_frontend/src/views/: Login.vue  ResetPassword.vue
vue_frontend/src/views/main/: Start.vue
vue_frontend/tests/unit/: api.spec.ts
