[tool.poetry]
name = "django_vue_test"
version = "0.0.1"
description = "Just a test project"
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ephes/django_vue_test"
keywords = [
    "django", "vue",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
Pillow = "^6"
django-filter = "^2.2.0"
coreapi = "^2.3.3"
djangorestframework = "^3.11.0"
python-slugify = "^4.0.0"
django-model-utils = "^4.0.0"
django-environ = "^0.4.5"
django-allauth = "^0.41.0"
pandas = "^1.0"
whitenoise = "^5.0.1"
django-crispy-forms = "^1.9.0"
psycopg2 = "^2.8.5"
argon2-cffi = "^19.2.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.4"
sphinx-rtd-theme = "^0.4"
twine = "^3.1.1"
flake8 = "^3.7"
black = "^19.10b0"
typer = "^0.0.8"
jupyter = "^1.0.0"
ipdb = "^0.13"
coverage = "^5.0"
pytest = "^5.3"
factory_boy = "^2.12"
pytest-django = "^3.8.0"
tox = "^3.14"
django_extensions = "^2.2"
coreapi-cli = "^1.0"
django-debug-toolbar = "^2.2"

[tool.poetry.scripts]
test = "commands:pytest"
lint = "commands:flake8"
autoformat = "commands:black"
show_coverage = "commands:coverage"
docs = "commands:docs"
notebook = "commands:notebook"
clean-build = "commands:clean_build"
clean-pyc = "commands:clean_pyc"
clean = "commands:clean"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
exclude = "migrations"
